[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bryson Wu <brysonwu@student.ubc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
motor = "^3.3.2"
fastapi = {extras = ["all"], version = "^0.104.1"}
openai = "^1.3.5"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
