[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bryson Wu <brysonwu@student.ubc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.5"
infobip-api-python-sdk = "^5.0.1"
motor = "^3.3.2"
openai = "^1.3.5"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pydantic = "^1.10.8"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
bcrypt = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
